2003-06-11 15:32  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Implement -glyphWithName: and
	-appendBezierPathWithGlyphs:count:toBezierPath:.

2003-06-07 23:05  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Add some ifdef:s to get it to compile with
	both freetype <=2.1.2 and >=2.1.3.

2003-06-06  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m (setWindowHintsForStyle): Specifically
	check for success of XGetWindowProperty call.

2003-05-25  Adam Fedor  <fedor@gnu.org>

	* Version 0.8.6

2003-05-19 15:56  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/shfill.m (function_getsample): Clamp to range.
	(function_setup): Use -doubleValue, not -intValue, for values that
	are allowed to be real numbers.

2003-05-18  Benhur Stein

	* Source/xlib/XGGState.m (-copyBits:fromRect:toPoint:): Draw
	correctly when source and dest have different flip'ness.
	(-_compositeGState:sourcefromRect:fromRecttoPoint:toPointop:opfraction:]):
	Draw correctly when source is flipped.

2003-05-18 00:03  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/GNUmakefile, Source/art/shfill.m: Implement basic
	version of shfill operator.

2003-05-17 14:49  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac: Make sure to add -lm when adding -ltiff (wasn't done
	in one case).

	* configure: Regenerate.

2003-05-11 19:21  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Report errors in more cases.

2003-05-07  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for freetype separetely and add to xlib flags
	if present.

2003-05-02  Adam Fedor  <fedor@gnu.org>

	* Documentation/Back/GNUmakefile: Remove GNUSTEP_MAKEFILES

2003-04-27  Adam Fedor  <fedor@gnu.org>

	* Updates for filesystem change.
	* GNUmakefile (GNUSTEP_MAKEFILES): Remove
	* Documentation/GNUmakefile, Source/GNUmakefile,
	Source/*/GNUmakefile, Tools/GNUmakefile: Idem
	* configure.ac: Replace $GNUSTEP_SYSTEM_ROOT/Makefiles with